# sweets

./: .env.template  .gitignore  .rustfmt.toml  Cargo.toml  docker-compose.yaml  movine.toml
common/: Cargo.toml
common/src/: cache.rs  config.rs  env_utils.rs  error.rs  event.rs  lib.rs  pg.rs  random.rs
common/src/config/: postgres_config.rs  rabbit_config.rs  redis_config.rs  rust_env.rs  secrets.rs  service.rs  sms.rs
common/src/dtos/: mod.rs  phone_numbner.rs
common/src/event/: handler.rs  repository.rs
common/src/infra/event/: inmem_event_bus.rs  inmem_repository.rs  postgres_event_repository.rs
common/src/models/: aggregate_root.rs  avatar.rs  bio.rs  blurhash.rs  email.rs  gender.rs  id.rs  image.rs  mod.rs  password.rs  phone.rs
common/src/sql/: where_builder.rs
common/src/validator/: email.rs  ip.rs
crates/uni_sms/: Cargo.toml  algorithm.rs  lib.rs  message.rs  signature.rs
crates/uni_sms/message/: kind.rs  mobile.rs  request.rs  response.rs
fireworks/: Cargo.toml
fireworks/src/: lib.rs
fireworks/src/domain/: media.rs  mod.rs  story.rs
fireworks/src/domain/story/: aspect_ratio.rs  content.rs  kind.rs  media.rs  repository.rs  (+1 more)
im_common/: Cargo.toml  lib.rs
im_common/access/common/: mod.rs  response_status.rs
im_common/domain/session/: mod.rs
migrations/2021-11-21-064230_users/: up.sql
migrations/2021-11-22-040016_accounts/: up.sql
migrations/2021-12-10-173355_stories/: down.sql  up.sql
migrations/2021-12-11-073815_story_medias/: down.sql  up.sql
migrations/2021-12-12-054630_story_likes/: down.sql  up.sql
migrations/2021-12-12-054631_story_comments/: down.sql  up.sql
user_access/: Cargo.toml
user_access/src/: container.rs  lib.rs  types.rs
user_access/src/app/: dtos.rs  mod.rs
user_access/src/domain/: account.rs  mod.rs  token.rs  user.rs
(+34 files in other folders)
