[package]
name = "uni_sms"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.4"
sha2 = "0.10.1"
hmac = "0.12.0"
hex = "0.4.3"

[dependencies.reqwest]
version = "0.11.9"
features = ["json"]

[dependencies.serde]
version = "1.0.133"
features = ['derive']
